# holochain-forum-demo

./: Cargo.toml  package-lock.json  package.json
dnas/forum/workdir/: dna.yaml
dnas/forum/zomes/coordinator/posts/: Cargo.toml
dnas/forum/zomes/coordinator/posts/src/: comment.rs  post.rs
dnas/trust_atom_integrity_zome/: Cargo.toml
dnas/trust_atom_zome/: Cargo.toml
dnas/trust_atom_zome/src/: lib.rs
tests/src/forum/posts/: all-posts.test.ts  comment.test.ts  post.test.ts
ui/src/forum/posts/: CommentDetail.svelte  CommentsForPost.svelte  CreateComment.svelte  CreatePost.svelte  EditPost.svelte  PostDetail.svelte  types.ts
