[package]
edition = "2021"
name = "trust_atom_zome"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "trust_atom_zome"

[net]
git-fetch-with-cli = false # default is false

[dependencies]
trust_atom = {git = "https://github.com/trustgraph/trustgraph-holochain.git", rev="7888e6fa1d7f459a5485dab267490aa5005c95fc", package = "trust_atom"}
# trust_atom = { path= "/Users/knight/code/trustgraph/trustgraph-holochain/zomes/trust_atom"}

hdk = "=0.1.1"
rust_decimal = "1"
serde = "1"
